# pandaprobe-sdk

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-python.yml  release-python.yml
libraries/python/: Makefile  README.md  pyproject.toml
libraries/python/examples/: 01_decorators.py  02_openai_wrapper.py  03_context_manager.py  04_sessions.py  README.md
libraries/python/examples/anthropic/: 01_chat_completion.py  02_multi_turn.py  03_streaming.py
libraries/python/examples/bedrock/: 01_converse.py  02_converse_stream.py  03_invoke_model.py
libraries/python/examples/claude_agent_sdk/: 01_simple_agent.py  02_tool_agent.py  03_multi_turn.py
libraries/python/examples/context_managers/: 01_rag_pipeline.py  02_multi_turn.py
libraries/python/examples/crewai/: 01_simple_crew.py  02_tool_crew.py  03_multi_agent.py
libraries/python/examples/decorators/: 01_support_agent.py  01_trace_and_span.py  02_multi_turn.py
libraries/python/examples/deepagents/: 01_simple_agent.py  02_subagents.py  03_multi_turn.py
libraries/python/examples/gemini/: 01_chat_completion.py  02_multi_turn.py  03_streaming.py
libraries/python/examples/google_adk/: 01_simple_agent.py  02_tool_agent.py  03_multi_turn.py
libraries/python/examples/langchain/: 01_simple_agent.py  02_lcel_chain.py  03_multi_turn.py
libraries/python/examples/langgraph/: 01_chatbot.py  02_tool_agent.py  03_multi_turn.py
libraries/python/examples/mistral/: 01_chat_completion.py  02_streaming.py  03_multi_turn.py
libraries/python/examples/openai/: 01_chat_completion.py  02_streaming.py  03_multi_turn.py  04_responses_api.py
libraries/python/examples/openai_agents/: 01_simple_agent.py  02_tool_agent.py  03_multi_turn.py
libraries/python/examples/sessions/: 01_multi_turn.py
libraries/python/src/pandaprobe/: __init__.py  client.py  config.py  decorators.py  schemas.py  transport.py  validation.py
libraries/python/src/pandaprobe/integrations/: __init__.py  _base.py
libraries/python/src/pandaprobe/integrations/_langchain_core/: __init__.py  callback.py  utils.py
libraries/python/src/pandaprobe/integrations/claude_agent_sdk/: __init__.py  adapter.py  utils.py
libraries/python/src/pandaprobe/integrations/crewai/: __init__.py  adapter.py  utils.py
libraries/python/src/pandaprobe/integrations/deepagents/: __init__.py  callback.py
libraries/python/src/pandaprobe/integrations/google_adk/: __init__.py  adapter.py  utils.py
libraries/python/src/pandaprobe/integrations/langchain/: __init__.py  callback.py
libraries/python/src/pandaprobe/integrations/langgraph/: __init__.py  callback.py  utils.py
libraries/python/src/pandaprobe/integrations/openai_agents/: __init__.py  adapter.py  utils.py
libraries/python/src/pandaprobe/tracing/: __init__.py  context.py  session.py  span.py
libraries/python/src/pandaprobe/wrappers/: __init__.py  _base.py
libraries/python/src/pandaprobe/wrappers/anthropic/: __init__.py  utils.py  wrapper.py
libraries/python/src/pandaprobe/wrappers/bedrock/: __init__.py  utils.py  wrapper.py
libraries/python/src/pandaprobe/wrappers/gemini/: __init__.py  utils.py  wrapper.py
libraries/python/src/pandaprobe/wrappers/mistral/: __init__.py  utils.py  wrapper.py
libraries/python/src/pandaprobe/wrappers/openai/: __init__.py  utils.py  wrapper.py
libraries/python/tests/: conftest.py  test_client.py  test_config.py  test_decorators.py  test_schemas.py  test_session_context.py  test_tracing.py  test_transport.py  test_validation.py
libraries/python/tests/test_integrations/: test_claude_agent_sdk.py  test_crewai.py  test_deepagents.py  test_google_adk.py  test_langchain.py  test_langgraph.py  test_openai_agents.py
libraries/python/tests/test_wrappers/: test_anthropic.py  test_base.py  test_bedrock.py  test_gemini.py  test_mistral.py  test_openai.py
libraries/typescript/: README.md
